--- a/task4/index.html
+++ b/task4/index.html
@@ -1,7 +1,6 @@
 <html>
-  <head>
-    <script src="index.js"></script>
-  </head>
   <body>
+    <div id="root"></div>
+    <script src="index.js"></script>
   </body>
 </html>
