--- a/task2/index.html
+++ b/task2/index.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    <div id="root"></div>
+    <input type="text" id="input">
+    <button id="btn">Send</button>
+    <div id="result"></div>
     <script src="index.js"></script>
   </body>
 </html>
