--- a/task3/index.html
+++ b/task3/index.html
@@ -1,6 +1,17 @@
 <html>
+  <head>
+    <style>
+      #error {
+        display: none;
+        color: red;
+      }
+    </style>
+  </head>
   <body>
-    <div id="root"></div>
+    <input type="text" id="input">
+    <button id="btn">Send</button>
+    <div id="error">Invalid Expression</div>
+    <div id="expressions"></div>
     <script src="index.js"></script>
   </body>
 </html>
